--- a/qml.qrc
+++ b/qml.qrc
@@ -2,5 +2,10 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>qtquickcontrols2.conf</file>
+        <file>Stufe5Form.qml</file>
+        <file>Stufe1Form.qml</file>
+        <file>Stufe2Form.qml</file>
+        <file>Stufe3Form.qml</file>
+        <file>Stufe4Form.qml</file>
     </qresource>
 </RCC>
